--- a/src/SprykerEco/Yves/Payolution/Theme/default/invoice.twig
+++ b/src/SprykerEco/Yves/Payolution/Theme/default/invoice.twig
@@ -1,3 +1,5 @@
+{# File is deprecated. Use views/installlment/invoice.twig #}
+
 <div class="payolution-form payolution-invoice-form payment-form small-12 medium-9 large-6" id="payolutionInvoice">
     <div class="small-12 columns">
         <label>
