--- a/src/SprykerEco/Yves/Payolution/Theme/default/installment.twig
+++ b/src/SprykerEco/Yves/Payolution/Theme/default/installment.twig
@@ -1,3 +1,5 @@
+{# File is deprecated. Use views/installlment/installlment.twig #}
+
 <div class="payolution-form payolution-installment-form payment-form small-12 medium-9 large-6" id="payolutionInstallment">
     <div class="small-12 columns">
         <label>
