--- a/src/SprykerEco/Yves/Payolution/Theme/default/views/invoice/invoice.twig
+++ b/src/SprykerEco/Yves/Payolution/Theme/default/views/invoice/invoice.twig
@@ -1,13 +1,9 @@
 {% extends model('template') %}
 
-{% define data = {
-    form: form,
-} %}
-
 {% block body %}
     {% include molecule('invoice', 'Payolution') with {
         data: {
-            form: data.form,
+            form: _view.paymentForm,
         },
     } only %}
 {% endblock %}
