--- a/src/SprykerEco/Yves/Payolution/Theme/default/components/molecules/invoice/invoice.twig
+++ b/src/SprykerEco/Yves/Payolution/Theme/default/components/molecules/invoice/invoice.twig
@@ -11,9 +11,9 @@
         <div>
             <label>
                 {{ 'payolutionInvoice.date_of_birth' | trans }}*
-                {{ form_widget(data.form.payolutionInvoice.date_of_birth, { 'attr': {'placeholder': 'payolutionInvoice.date_of_birth' | trans } }) }}
+                {{ form_widget(data.form.date_of_birth, { 'attr': {'placeholder': 'payolutionInvoice.date_of_birth' | trans } }) }}
             </label>
-            {{ form_errors(data.form.payolutionInvoice.date_of_birth) }}
+            {{ form_errors(data.form.date_of_birth) }}
         </div>
     </div>
 {% endblock %}
