--- a/src/SprykerEco/Yves/Payolution/Theme/default/views/installment/installment.twig
+++ b/src/SprykerEco/Yves/Payolution/Theme/default/views/installment/installment.twig
@@ -3,7 +3,7 @@
 {% block body %}
     {% include molecule('installment', 'Payolution') with {
         data: {
-            form: _view.paymentForm,
+            form: _view.paymentForm.payolutionInstallment,
         },
     } only %}
 {% endblock %}
