--- a/src/SprykerEco/Yves/Payolution/Theme/default/views/installment/installment.twig
+++ b/src/SprykerEco/Yves/Payolution/Theme/default/views/installment/installment.twig
@@ -1,4 +1,8 @@
-{% extends model('template') %}
+{% extends template('widget') %}
+
+{% define data = {
+    form: _view.paymentForm.payolutionInstallment,
+} %}
 
 {% block body %}
     {% include molecule('installment', 'Payolution') with {
