--- a/src/SprykerEco/Yves/Payolution/Theme/default/views/invoice/invoice.twig
+++ b/src/SprykerEco/Yves/Payolution/Theme/default/views/invoice/invoice.twig
@@ -7,7 +7,7 @@
 {% block body %}
     {% include molecule('invoice', 'Payolution') with {
         data: {
-            form: _view.paymentForm.payolutionInvoice,
+            form: data.form,
         },
     } only %}
 {% endblock %}
